--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-fixed-top">
                 <a class="navbar-brand">Marco90v</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -20,10 +20,10 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="about" href="#">Sombre Mí</a>
+                            <a class="nav-link active" aria-current="about" href="#about">Sombre Mí</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="skills" href="#">Habilidades</a>
+                            <a class="nav-link" aria-current="skills" href="#skills">Habilidades</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" aria-current="proyects" href="#">Proyectos</a>
