seccion habilidades finalizada, iconos agregados y estilos

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Portafolio | Marco Velasquez Figarella</title>
     <link href="style.css" rel="stylesheet">
+    <!-- <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script> -->
 </head>
 <body>
     <div class="container-fluid">
@@ -61,7 +63,8 @@
         <section id="skills" class="row">
             <div class="skills">
                 <div class="fileManager">
-                    <div class="barFileManager">Marco90v - Habilidades
+                    <div class="barFileManager">
+                        Habilidades - Marco90v
                         <div class="botonTerminal">
                             <div></div>
                             <div></div>
@@ -131,10 +134,107 @@
                             </ul>
                         </div>
                         <div class="contentFileManager">
-
+                            <ul>
+                                <li>
+                                    <a href="https://developer.mozilla.org/es/docs/Web/JavaScript" target="_blank">
+                                        <img src="assets/javascript-1.svg" alt="JavaScript" >
+                                        <span>JavaScript</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://es.reactjs.org/" target="_blank">
+                                        <img src="assets/react-2.svg" alt="React">
+                                        <span>React</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://angular.io/" target="_blank">
+                                        <img src="assets/angular-icon-1.svg" alt="Angular">
+                                        <span>Angular</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://nodejs.org/es/" target="_blank">
+                                        <img src="assets/nodejs-icon.svg" alt="NodeJS">
+                                        <span>NodeJS</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://www.php.net/manual/es/intro-whatis.php" target="_blank">
+                                        <img src="assets/php-1.svg" alt="PHP">
+                                        <span>PHP</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://developer.mozilla.org/es/docs/Web/CSS" target="_blank">
+                                        <img src="assets/css-3.svg" alt="CSS">
+                                        <span>CSS</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://getbootstrap.com/" target="_blank">
+                                        <img src="assets/bootstrap-5-1.svg" alt="BootStrap">
+                                        <span>BootStrap</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://www.python.org/" target="_blank">
+                                        <img src="assets/python-5.svg" alt="Python">
+                                        <span>Python</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://www.electronjs.org/" target="_blank">
+                                        <img src="assets/electron-1.svg" alt="ElectronJS">
+                                        <span>ElectronJS</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#https://www.mysql.com/" target="_blank">
+                                        <img src="assets/mysql-2.svg" alt="MySQL">
+                                        <span>MySQL</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://firebase.google.com/?hl=es-419" target="_blank">
+                                        <img src="assets/firebase-1.svg" alt="Firebase">
+                                        <span>Firebase</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://www.microsoft.com/es-es/windows" target="_blank">
+                                        <img src="assets/microsoft-windows-22.svg" alt="Windows">
+                                        <span>Windows</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://www.linux.org/" target="_blank">
+                                        <img src="assets/linux-tux.svg" alt="Linux">
+                                        <span>Linux</span>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>
+        <section id="proyects" class="row">
+            <div class="proyects">
+                <div class="browser">
+                    <div class="barBrowser">Proyectos | Marco90v - Mozilla Firefox
+                        <div class="botonTerminal">
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="contact" class="row">
+            <div class="contact">
+
             </div>
         </section>
     </div>
