--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-fixed-top">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-fixed-top myNav">
                 <a class="navbar-brand">Marco90v</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -41,6 +41,7 @@
             <div class="about">
                 <div class="terminal">
                     <div class="barTerminal">
+                        <img src="assets/terminal-1.svg" alt="iconTerminal">
                         Marco90v@Developer:~
                         <div class="botonTerminal">
                             <div></div>
@@ -186,7 +187,7 @@
                                 <li>
                                     <a href="https://www.electronjs.org/" target="_blank">
                                         <img src="assets/electron-1.svg" alt="ElectronJS">
-                                        <span>ElectronJS</span>
+                                        <span>Electron</span>
                                     </a>
                                 </li>
                                 <li>
@@ -209,7 +210,7 @@
                                 </li>
                                 <li>
                                     <a href="https://www.linux.org/" target="_blank">
-                                        <img src="assets/linux-tux.svg" alt="Linux">
+                                        <img src="assets/linux-tux-2.svg" alt="Linux">
                                         <span>Linux</span>
                                     </a>
                                 </li>
@@ -222,7 +223,7 @@
         <section id="proyects" class="row">
             <div class="proyects">
                 <div class="browser">
-                    <div class="barBrowser">Proyectos | Marco90v - Mozilla Firefox
+                    <div class="barBrowser">Proyectos | Marco90v - Firefox
                         <div class="botonTerminal">
                             <div></div>
                             <div></div>
@@ -358,7 +359,12 @@
                 <div class="VSC">
                     <div class="barVSC">
                         <img src="assets/visual-studio-code-1.svg" alt="Contacto">
-                        Contacto - Marco90v | Visual Studio Code
+                        <div class="contact1">
+                            Contacto - Marco90v | Visual Studio Code
+                        </div>
+                        <div class="contact2">
+                            Contacto - Marco90v | VSC
+                        </div>
                         <div class="botonTerminal">
                             <div></div>
                             <div></div>
@@ -415,6 +421,10 @@
             </div>
         </section>
     </div>
+
+    <!-- <script> 
+        alert("La resolución de tu pantalla es: " + screen.width + " x " + screen.height) 
+    </script> -->
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
