--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta name="robots" content="noindex">
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portafolio de programar. Author: Marco Velasquez Figarella">
     <title>Portafolio | Marco Velasquez Figarella</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="style.css" rel="stylesheet" type="text/css">
+
 </head>
 <body>
     <div class="container-fluid">
@@ -36,7 +39,7 @@
         </div>
         <section id="about" class="row">
             <div class="about">
-                <div class="terminal">
+                <div class="terminal aniTerminal">
                     <div class="barTerminal">
                         <img src="assets/terminal-1.svg" width="1.5em" height="1.5em" alt="iconTerminal">
                         Marco90v@Developer:~
@@ -66,7 +69,7 @@
         </section>
         <section id="skills" class="row">
             <div class="skills">
-                <div class="fileManager">
+                <div class="fileManager baseFileManager">
                     <div class="barFileManager">
                         Habilidades - Marco90v
                         <div class="botonTerminal">
@@ -143,7 +146,7 @@
         </section>
         <section id="proyects" class="row">
             <div class="proyects">
-                <div class="browser">
+                <div class="browser baseBrowser">
                     <div class="barBrowser">Proyectos | Marco90v - Firefox
                         <div class="botonTerminal">
                             <div></div>
@@ -172,9 +175,9 @@
         </section>
         <section id="contact" class="row">
             <div class="contact">
-                <div class="VSC">
+                <div class="VSC baseVSC">
                     <div class="barVSC">
-                        <img src="assets/visual-studio-code-1.svg" width="1.2em" height="1.2em" alt="Contacto">
+                        <img src="assets/visual-studio-code-1.svg" width="1.2em" height="100%" alt="Contacto">
                         <div class="contact1">
                             Contacto - Marco90v | Visual Studio Code
                         </div>
@@ -225,7 +228,7 @@
                             </a>
                         </p>
                         <p>
-                            <a href="https://www.linkedin.com/in/marco-velasquez-f/" target="_blank">
+                            <a href="https://www.linkedin.com/in/marco-velasquez-f/" target="_blank" rel="noopener">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
                                     <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
                                 </svg>
@@ -241,8 +244,6 @@
     <!-- <script> 
         alert("La resolución de tu pantalla es: " + screen.width + " x " + screen.height) 
     </script> -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link href="style.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="funciones.js"></script>
 </body>
