se agrego fullpage para scroll. se ajusto contacto y detalles visuales, se agrego iconos

--- a/CV/index.html
+++ b/CV/index.html
@@ -16,7 +16,6 @@
                 <figure class="img">
                     <img src="assets/myAvatar.png" alt="foto" class="foto">
                     <h1 class="name">Marco Velasquez Figarella</h1>
-                    <!-- <div class="separador"></div> -->
                 </figure>
             </section>
             <section class="sobreMi">
@@ -40,9 +39,21 @@
                         </a>
                         </li>
                     <li>
+                        <a href="https://marco90v.github.io/Portafolio/" target="_blank">
+                            <img src="assets/file-code-fill.svg" alt="" class="icon">
+                            marco90v.github.io/Portafolio
+                        </a>
+                    </li>
+                    <li>
                         <a href="https://github.com/Marco90v" target="_blank">
                             <img src="assets/github.svg" alt="" class="icon">
-                            Marco90v
+                            github.com/Marco90v
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.linkedin.com/in/marco90v/" target="_blank">
+                            <img src="assets/linkedin.svg" alt="" class="icon">
+                            linkedin.com/in/marco90v
                         </a>
                     </li>
                 </ul>
