se actualizo avatar y se ajusto CV, se agrego discord

--- a/CV/index.html
+++ b/CV/index.html
@@ -56,6 +56,12 @@
                             linkedin.com/in/marco90v
                         </a>
                     </li>
+                    <li>
+                        <a>
+                            <img src="assets/discord.svg" alt="" class="icon">
+                            DarkJS#5362
+                        </a>
+                    </li>
                 </ul>
             </section>
             <section class="educacion">
