--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Portafolio | Marco Velasquez Figarella</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet" type="text/css">
-    <link rel="icon" type="image/webp" href="assets/11544352.webp" sizes="16x16">
+    <link rel="icon" type="image/webp" href="assets/avatarNew.webp" sizes="16x16">
 </head>
 <body>
     <div class="container-fluid">
@@ -53,7 +53,7 @@
                         <div class="cuerpoTerminal">
                             <div class="comandoTerminal">Marco90v@Developer:~$ <span class="comando">neofetch &nbsp;<span id="typed"></span></span></div>
                             <div class="bodyTerminal">
-                                <div class="avatar" width="30%"><img src="assets/11544352.webp" alt="avatar">
+                                <div class="avatar" width="30%"><img src="assets/avatarNew.webp" alt="avatar">
                                 </div>
                                 <div class="perfil">
                             
