add google analitycs, photo CV

--- a/CV/index.html
+++ b/CV/index.html
@@ -14,7 +14,8 @@
         <div class="left">
             <section class="avatar">
                 <figure class="img">
-                    <img src="assets/myAvatar.png" alt="foto" class="foto">
+                    <!-- <img src="assets/myAvatar.png" alt="foto" class="foto"> -->
+                    <img src="assets/DSC_0343.JPG" alt="foto" class="foto">
                     <h1 class="name">Marco Velasquez Figarella</h1>
                 </figure>
             </section>
