google analitys CV y foto de perfil comprimida

--- a/CV/index.html
+++ b/CV/index.html
@@ -7,6 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV | Marco Velasquez Figarella</title>
     <link href="style.css" rel="stylesheet">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-32T3P2HMPK"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-32T3P2HMPK');
+    </script>
 </head>
 <body>
     <div class="hoja">
@@ -15,7 +24,7 @@
             <section class="avatar">
                 <figure class="img">
                     <!-- <img src="assets/myAvatar.png" alt="foto" class="foto"> -->
-                    <img src="assets/DSC_0343.JPG" alt="foto" class="foto">
+                    <img src="assets/DSC_0343.webp" alt="foto" class="foto">
                     <h1 class="name">Marco Velasquez Figarella</h1>
                 </figure>
             </section>
