--- a/index.html
+++ b/index.html
@@ -5,8 +5,173 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolio | Marco Velasquez Figarella</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="left">
+            <span>9:00</span>
+        </div>
+        <div class="right">
+            <picture>
+                <source media="(max-width: 1023px)" srcset="./assets/icons-movil/wifi.png">
+                <img src="./assets/icons-movil/wifi.png" alt="tools" >
+            </picture>
+            <picture>
+                <source media="(max-width: 1023px)" srcset="./assets/icons-movil/signal.png">
+                <img src="./assets/icons-movil/signal.png" alt="tools" >
+            </picture>
+            <picture>
+                <source media="(max-width: 1023px)" srcset="./assets/icons-movil/battery.png">
+                <img src="./assets/icons-movil/battery.png" alt="tools" >
+            </picture>
+        </div>
+    </header>
+    <main>
+
+        <div class="ventanas">
+            <div class="acercade">
+                <div class="barra">
+                    <p>Marco90v@Developer:~$</p>
+                    <picture>
+                        <img src="./assets/icons-movil/avatar.png" alt="avatar">
+                    </picture>
+                </div>
+                <div class="avatar">
+                    <picture>
+                        <img src="./assets/foto/myAvatarMovil.png" alt="fotoAvatar">
+                    </picture>
+                </div>
+                <div class="nameData">
+                    <h1>Marco Velasquez Figarella</h1>
+                    <p>Soy un profesional en el área de la tecnología enfocado en programación Web y con varios años de experiencia en diferentes actividades.</p>
+                    <p>Determinado a seguir creciendo y mejorando, en el ámbito profesional y personal.</p>
+                </div>
+            </div>
+            <div class="habilidades">
+                <div class="barra">
+                    <h1>Habilidades</h1>
+                    <picture>
+                        <img id="menuHabilidades" src="./assets/icons-movil/menu_archive.png" alt="menuArchive">
+                    </picture>
+                </div>
+                <div class="almacenamientoInterno">
+                    <picture>
+                        <img src="./assets/icons-movil/archive_folder_home.png" alt="Folder Home">
+                    </picture>
+                    <picture>
+                        <img src="./assets/icons-movil/arrow_right.png" alt="Arrow right">
+                    </picture>
+                    <h2>Almacenamiento interno</h2>
+                </div>
+                <ul id="skills" class="list">
+                    <li><a href="https://developer.mozilla.org/es/docs/Web/JavaScript" target="_blank"><img src="./assets/icons/javascript_32px.png" alt="JavaScript"><h3>JavaScript</h3></a></li>
+                    <li><a href="https://es.reactjs.org/" target="_blank"><img src="./assets/icons/react_32px.png" alt="React"><h3>React</h3></a></li>
+                    <li><a href="https://angular.io/" target="_blank"><img src="./assets/icons/angular_32px.png" alt="Angular"><h3>Angular</h3></a></li>
+                    <li><a href="https://nodejs.org/es/" target="_blank"><img src="./assets/icons/nodejs_32px.png" alt="NodeJs"><h3>NodeJs</h3></a></li>
+                    <li><a href="https://developer.mozilla.org/es/docs/Web/CSS" target="_blank"><img src="./assets/icons/css_32px.png" alt="CSS"><h3>CSS</h3></a></li>
+                    <li><a href="https://getbootstrap.com/" target="_blank"><img src="./assets/icons/bootstrap_32px.png" alt="Bootstrap"><h3>Bootstrap</h3></a></li>
+                    <li><a href="https://www.php.net/manual/es/intro-whatis.php" target="_blank"><img src="./assets/icons/php_32px.png" alt="PHP"><h3>PHP</h3></a></li>
+                    <li><a href="https://www.python.org/" target="_blank"><img src="./assets/icons/python_32px.png" alt="Python"><h3>Python</h3></a></li>
+                    <li><a href="https://www.electronjs.org/" target="_blank"><img src="./assets/icons/electronjs_32px.png" alt="Electron JS"><h3>Electron JS</h3></a></li>
+                    <li><a href="https://www.mysql.com/" target="_blank"><img src="./assets/icons/mysql_32px.png" alt="MySQL"><h3>MySQL</h3></a></li>
+                    <li><a href="https://firebase.google.com/?hl=es-419" target="_blank"><img src="./assets/icons/firebase_32px.png" alt="Firebase"><h3>Firebase</h3></a></li>
+                    <li><a href="https://www.microsoft.com/es-es/windows" target="_blank"><img src="./assets/icons/Windows_32px.png" alt="Windows"><h3>Windows</h3></a></li>
+                    <li><a href="https://www.linux.org/" target="_blank"><img src="./assets/icons/OS_Linux_32px.png" alt="Linux"><h3>Linux</h3></a></li>
+                </ul>
+            </div>
+            <div class="proyectos">
+                <div class="barNavigation">
+                    <h1>URL</h1>
+                </div>
+                <div class="contentProyects">
+                    <picture>
+                        <img src="./assets/proyects/prueba.png" alt="Fontend Mentor">
+                    </picture>
+                </div>
+                <div class="botones">
+                    <div id="left">
+                        <picture>
+                            <img src="./assets/icons-movil/arrow-left_32px.png" alt="Arrow Left" >
+                        </picture>
+                    </div>
+                    <div id="right">
+                        <picture>
+                            <img src="./assets/icons-movil/arrow-right_32px.png" alt="Arrow Right" >
+                        </picture>
+                    </div>
+                </div>
+            </div>
+            <div class="retos">
+                <div class="barGallery">
+                    <h1>URL</h1>
+                </div>
+                <div class="contentRetos">
+                    <picture>
+                        <img src="./assets/proyects/prueba.png" alt="Fontend Mentor">
+                    </picture>
+                </div>
+                <div class="botones">
+                    <div id="left">
+                        <picture>
+                            <img src="./assets/icons-movil/arrow-left_32px.png" alt="Arrow Left" >
+                        </picture>
+                    </div>
+                    <div id="right">
+                        <picture>
+                            <img src="./assets/icons-movil/arrow-right_32px.png" alt="Arrow Right" >
+                        </picture>
+                    </div>
+                </div>
+            </div>
+            <div class="contacto">
+                <div class="barTelegram">
+                    <h1>Contacto</h1>
+                </div>
+                <ul>
+                    <li><a href="https://github.com/Marco90v" target="_blank"><img src="./assets/icons-movil/github_32px.png" alt="Github"><h2>Github</h2></a></li>
+                    <li><a href="https://www.linkedin.com/in/marco90v/" target="_blank"><img src="./assets/icons-movil/linkedin_32px.png" alt="Linkedin"><h2>Linkedin</h2></a></li>
+                    <li><a href="https://marco90v.github.io/Portafolio/CV/" target="_blank"><img src="./assets/icons-movil/cv_32px.png" alt="Curriculum"><h2>Curriculum</h2></a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="menu">
+            <ul>
+                <li class="menuAcercade" >
+                    <picture>
+                        <source media="(max-width: 1023px)" srcset="./assets/icons-movil/tool.png">
+                        <img id="acercade" src="./assets/icons-movil/tool.png" alt="configuracion" >
+                    </picture>
+                </li> <!-- Configuracion|Terminal - Sobre Mi -->
+                <li class="menuHabilidades">
+                    <picture>
+                        <source media="(max-width: 1023px)" srcset="./assets/icons-movil/folder.png">
+                        <img id="habilidades" src="./assets/icons-movil/folder.png" alt="folder" >
+                    </picture>
+                </li> <!-- Carpeta - Habilidades -->
+                <li class="menuProyectos">
+                    <picture>
+                        <source media="(max-width: 1023px)" srcset="./assets/icons-movil/firefox.png">
+                        <img id="proyectos" src="./assets/icons-movil/firefox.png" alt="proyecto" >
+                    </picture>
+                </li> <!-- Navegador - Proyecto -->
+                <li class="menuRetos">
+                    <picture>
+                        <source media="(max-width: 1023px)" srcset="./assets/icons-movil/gallery.png">
+                        <img id="retos" src="./assets/icons-movil/gallery.png" alt="galeria" >
+                    </picture>
+                </li> <!-- Galeria|VSC - Retos -->
+                <li class="menuContacto">
+                    <picture>
+                        <source media="(max-width: 1023px)" srcset="./assets/icons-movil/telegram.png">
+                        <img id="contacto" src="./assets/icons-movil/telegram.png" alt="telegram" >
+                    </picture>
+                </li> <!-- Telegram|Thunderbird - Contacto -->
+            </ul>
+        </div>
+    </main>
+
+    <script src="./script.js"></script>
 </body>
 </html>
