--- a/index.html
+++ b/index.html
@@ -170,6 +170,9 @@
                 </li> <!-- Telegram|Thunderbird - Contacto -->
             </ul>
         </div>
+        <div class="title">
+            <h1>Portafolio</h1>
+        </div>
     </main>
 
     <script src="./script.js"></script>
