carga dinamica de elementos

--- a/index.html
+++ b/index.html
@@ -64,64 +64,38 @@
                     </picture>
                     <h2>Almacenamiento interno</h2>
                 </div>
-                <ul id="skills" class="list">
-                    <li><a href="https://developer.mozilla.org/es/docs/Web/JavaScript" target="_blank"><img src="./assets/icons/javascript_32px.png" alt="JavaScript"><h3>JavaScript</h3></a></li>
-                    <li><a href="https://es.reactjs.org/" target="_blank"><img src="./assets/icons/react_32px.png" alt="React"><h3>React</h3></a></li>
-                    <li><a href="https://angular.io/" target="_blank"><img src="./assets/icons/angular_32px.png" alt="Angular"><h3>Angular</h3></a></li>
-                    <li><a href="https://nodejs.org/es/" target="_blank"><img src="./assets/icons/nodejs_32px.png" alt="NodeJs"><h3>NodeJs</h3></a></li>
-                    <li><a href="https://developer.mozilla.org/es/docs/Web/CSS" target="_blank"><img src="./assets/icons/css_32px.png" alt="CSS"><h3>CSS</h3></a></li>
-                    <li><a href="https://getbootstrap.com/" target="_blank"><img src="./assets/icons/bootstrap_32px.png" alt="Bootstrap"><h3>Bootstrap</h3></a></li>
-                    <li><a href="https://www.php.net/manual/es/intro-whatis.php" target="_blank"><img src="./assets/icons/php_32px.png" alt="PHP"><h3>PHP</h3></a></li>
-                    <li><a href="https://www.python.org/" target="_blank"><img src="./assets/icons/python_32px.png" alt="Python"><h3>Python</h3></a></li>
-                    <li><a href="https://www.electronjs.org/" target="_blank"><img src="./assets/icons/electronjs_32px.png" alt="Electron JS"><h3>Electron JS</h3></a></li>
-                    <li><a href="https://www.mysql.com/" target="_blank"><img src="./assets/icons/mysql_32px.png" alt="MySQL"><h3>MySQL</h3></a></li>
-                    <li><a href="https://firebase.google.com/?hl=es-419" target="_blank"><img src="./assets/icons/firebase_32px.png" alt="Firebase"><h3>Firebase</h3></a></li>
-                    <li><a href="https://www.microsoft.com/es-es/windows" target="_blank"><img src="./assets/icons/Windows_32px.png" alt="Windows"><h3>Windows</h3></a></li>
-                    <li><a href="https://www.linux.org/" target="_blank"><img src="./assets/icons/OS_Linux_32px.png" alt="Linux"><h3>Linux</h3></a></li>
-                </ul>
+                <ul id="skills" class="list"></ul>
             </div>
             <div class="proyectos">
                 <div class="barNavigation">
-                    <h1>URL</h1>
+                    <h1></h1>
                 </div>
-                <div class="contentProyects">
+                <div class="contentProyects"></div>
+                <div id="left">
                     <picture>
-                        <img src="./assets/proyects/prueba.png" alt="Fontend Mentor">
+                        <img src="./assets/icons-movil/arrow-left_32px.png" alt="Arrow Left" >
                     </picture>
                 </div>
-                <div class="botones">
-                    <div id="left">
-                        <picture>
-                            <img src="./assets/icons-movil/arrow-left_32px.png" alt="Arrow Left" >
-                        </picture>
-                    </div>
-                    <div id="right">
-                        <picture>
-                            <img src="./assets/icons-movil/arrow-right_32px.png" alt="Arrow Right" >
-                        </picture>
-                    </div>
+                <div id="right">
+                    <picture>
+                        <img src="./assets/icons-movil/arrow-right_32px.png" alt="Arrow Right" >
+                    </picture>
                 </div>
             </div>
             <div class="retos">
                 <div class="barGallery">
                     <h1>URL</h1>
                 </div>
-                <div class="contentRetos">
+                <div class="contentRetos"></div>
+                <div id="left">
                     <picture>
-                        <img src="./assets/proyects/prueba.png" alt="Fontend Mentor">
+                        <img src="./assets/icons-movil/arrow-left_32px.png" alt="Arrow Left" >
                     </picture>
                 </div>
-                <div class="botones">
-                    <div id="left">
-                        <picture>
-                            <img src="./assets/icons-movil/arrow-left_32px.png" alt="Arrow Left" >
-                        </picture>
-                    </div>
-                    <div id="right">
-                        <picture>
-                            <img src="./assets/icons-movil/arrow-right_32px.png" alt="Arrow Right" >
-                        </picture>
-                    </div>
+                <div id="right">
+                    <picture>
+                        <img src="./assets/icons-movil/arrow-right_32px.png" alt="Arrow Right" >
+                    </picture>
                 </div>
             </div>
             <div class="contacto">
